--- a/components/button/style/mixin.less
+++ b/components/button/style/mixin.less
@@ -109,6 +109,7 @@
 .button-group-base(@btnClassName) {
   position: relative;
   display: inline-block;
+  height: 100px;
   > .@{btnClassName} {
     position: relative;
     line-height: @btn-height-base - 2px;
@@ -155,7 +156,7 @@
   user-select: none;
   transition: all .3s @ease-in-out;
   position: relative;
-
+    width:200px;
   > .@{iconfont-css-prefix} {
     line-height: 1;
   }
@@ -195,6 +196,7 @@
 // primary button style
 .btn-primary() {
   .button-variant-primary(@btn-primary-color; @btn-primary-bg);
+  border:3px solid red;
 }
 
 // default button style
